--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fluxury",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "Add luxury sugar to simplify implementing Facebook's flavor of Flux architecture.",
   "main": "./lib/index.js",
   "jsnext:main": "index.js",
@@ -12,5 +12,8 @@
   "dependencies": {
     "fbemitter": "^2.0.0",
     "flux": "^2.1.1"
+  },
+  "devDependencies": {
+    "tape": "^4.2.2"
   }
 }
