--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "flux": "^2.1.1"
   },
   "devDependencies": {
-    "tape": "^4.2.2"
+    "tape": "^4.2.2",
+    "object-assign": "^4.0.1"
   }
 }
