--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fluxury",
-  "version": "0.3.5",
+  "version": "0.3.6",
   "description": "Add luxury sugar to simplify implementing Facebook's flavor of Flux architecture.",
   "main": "./lib/index.js",
   "jsnext:main": "index.js",
@@ -14,7 +14,8 @@
     "flux": "^2.1.1"
   },
   "devDependencies": {
-    "tape": "^4.2.2",
-    "object-assign": "^4.0.1"
+    "immutable": "^3.7.5",
+    "object-assign": "^4.0.1",
+    "tape": "^4.2.2"
   }
 }
