--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "fluxury",
-  "version": "0.3.9",
+  "version": "0.4.0",
   "description": "Add luxury sugar to simplify implementing Facebook's flavor of Flux architecture.",
   "main": "./lib/index.js",
   "jsnext:main": "index.js",
   "scripts": {
+    "build": "babel index.js -o lib/index.js",
     "test": "node test"
   },
   "author": "Peter Moresi",
@@ -14,6 +15,7 @@
     "flux": "^2.1.1"
   },
   "devDependencies": {
+    "babel": "^5.8.34",
     "immutable": "^3.7.5",
     "object-assign": "^4.0.1",
     "tape": "^4.2.2"
