--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fluxury",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "description": "Add luxury sugar to simplify implementing Facebook's flavor of Flux architecture.",
   "main": "./lib/index.js",
   "jsnext:main": "index.js",
@@ -17,7 +17,8 @@
   "devDependencies": {
     "babel": "^5.8.34",
     "immutable": "^3.7.5",
-    "tape": "^4.2.2"
+    "tape": "^4.2.2",
+    "webpack": "^1.12.9"
   },
   "repository": {
     "type": "git",
