--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fluxury",
-  "version": "0.7.1",
+  "version": "0.7.3",
   "description": "Add luxury sugar to simplify implementing Facebook's flavor of Flux architecture.",
   "main": "./lib/index.js",
   "jsnext:main": "index.js",
@@ -15,7 +15,10 @@
     "flux": "^2.1.1"
   },
   "devDependencies": {
-    "babel": "^5.8.34",
+    "babel-cli": "^6.1.2",
+    "babel-core": "^6.1.2",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.1.3",
+    "babel-preset-es2015": "^6.1.2",
     "immutable": "^3.7.5",
     "tape": "^4.2.2",
     "webpack": "^1.12.9"
