--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "babel src/invariant.js -o lib/invariant.js && babel src/Dispatcher.js -o lib/Dispatcher.js && babel src/index.js -o lib/index.js",
     "bundle": "browserify -g uglifyify ./lib/index.js > dist/fluxury.js",
-    "test": "node test"
+    "test": "node test",
+    "all": "npm run build && npm test && npm run bundle"
   },
   "author": "Peter Moresi",
   "license": "MIT",
