--- a/package.json
+++ b/package.json
@@ -1,31 +1,29 @@
 {
-  "name": "pure-flux",
-  "version": "1.2.0",
-  "description": "Yet Another Flux",
+  "name": "fluxury",
+  "version": "4.0.0",
+  "description": "state management in js",
   "main": "./lib/index.js",
   "scripts": {
-    "build": "gulp",
-    "test": "babel-node test"
+    "build": "npx rollup --format=umd --name=fluxury src/index.js | npx buble | npx uglifyjs > lib/index.js",
+    "test": "npx nodent test.js"
   },
   "engines": {
-    "node": ">=6.0"
+    "node": ">=8.0"
   },
-  "author": "Peter Moresi",
+  "author": "JC Fisher",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.1.2",
-    "babel-core": "^6.1.2",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.1.3",
-    "babel-preset-es2015": "^6.1.2",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
+    "buble": "^0.19.3",
     "immutable": "^3.7.5",
+    "nodent": "^3.2.6",
+    "rollup": "^0.59.1",
     "tape": "^4.2.2",
-    "tape-async": "^2.1.1"
+    "tape-async": "^2.1.1",
+    "uglify-js": "^3.3.25"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/WebsiteHQ/pure-flux.git"
+    "url": "git+https://github.com/jcfisher007/fluxury.git"
   },
   "keywords": [
     "react",
@@ -33,7 +31,7 @@
     "flux"
   ],
   "bugs": {
-    "url": "https://github.com/WebsiteHQ/pure-flux/issues"
+    "url": "https://github.com/jcfisher007/fluxury/issues"
   },
-  "homepage": "https://github.com/WebsiteHQ/pure-flux#readme"
+  "homepage": "https://github.com/jcfisher007/fluxury#readme"
 }
